force-app/main/default/objects/Student__c/fields/Avg_Ratings__c.field-meta.xml
<CustomField>
    <fullName>Avg_Ratings__c</fullName>
    <formula>IF(Total_Ratings_Given__c &lt; 1  , 0, Sum_Of_Total_Ratings__c   /Total_Ratings_Given__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg. Ratings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>