force-app/main/default/objects/Student__c/fields/BE_Percentage__c.field-meta.xml
<CustomField>
    <fullName>BE_Percentage__c</fullName>
    <label>BE Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>