force-app/main/default/objects/Student__c/fields/Course_Opted__c.field-meta.xml
<CustomField>
    <fullName>Course_Opted__c</fullName>
    <label>Course Opted</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stream_Opted__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Angular</fullName>
            </value>
            <value>
                <fullName>ASP .NET</fullName>
            </value>
            <value>
                <fullName>C#</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>Cypress</fullName>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>JavaScript</fullName>
            </value>
            <value>
                <fullName>MS SQL</fullName>
            </value>
            <value>
                <fullName>MVC</fullName>
            </value>
            <value>
                <fullName>My SQL</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>React</fullName>
            </value>
            <value>
                <fullName>Salesforce Admin</fullName>
            </value>
            <value>
                <fullName>Salesforce Developer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>