force-app/main/default/objects/Student__c/fields/Currently_working_at__c.field-meta.xml
<CustomField>
    <fullName>Currently_working_at__c</fullName>
    <label>Currently working at</label>
    <length>100</length>
    <type>Text</type>
</CustomField>