force-app/main/default/objects/Student__c/fields/Registration_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Registration Date Time</label>
    <type>DateTime</type>
</CustomField>