force-app/main/default/objects/Student__c/fields/Registration_Fees__c.field-meta.xml
<CustomField>
    <fullName>Registration_Fees__c</fullName>
    <defaultValue>5000</defaultValue>
    <label>Registration Fees</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>