force-app/main/default/objects/Student__c/fields/Scholarship_Fees__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Fees__c</fullName>
    <label>Scholarship</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>