force-app/main/default/objects/Student__c/fields/Stream_Opted__c.field-meta.xml
<CustomField>
    <fullName>Stream_Opted__c</fullName>
    <label>Stream Opted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud Computing</fullName>
            </value>
            <value>
                <fullName>Database</fullName>
            </value>
            <value>
                <fullName>Data Science</fullName>
            </value>
            <value>
                <fullName>Frontend</fullName>
            </value>
            <value>
                <fullName>Programming Languages</fullName>
            </value>
            <value>
                <fullName>Web Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>