force-app/main/default/objects/Student__c/fields/Student_Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Student_Referred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Referred By</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>