force-app/main/default/objects/Student__c/fields/Sum_Of_Total_Ratings__c.field-meta.xml
<CustomField>
    <fullName>Sum_Of_Total_Ratings__c</fullName>
    <label>Sum Of Total Ratings</label>
    <summarizedField>Rating__c.Rating_Out_Of_10__c</summarizedField>
    <summaryForeignKey>Rating__c.Rating_Given_To_Which_Student__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>