force-app/main/default/objects/Student__c/fields/Technology_Domain__c.field-meta.xml
<CustomField>
    <fullName>Technology_Domain__c</fullName>
    <label>Technology/Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DotNet</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Web Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>