force-app/main/default/objects/Student__c/fields/Total_Ratings_Given__c.field-meta.xml
<CustomField>
    <fullName>Total_Ratings_Given__c</fullName>
    <label>Total Ratings Given</label>
    <summaryForeignKey>Rating__c.Rating_Given_To_Which_Student__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>