force-app/main/default/objects/Student__c/fields/Years_Of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Years_Of_Experience__c</fullName>
    <label>Years Of Experience</label>
    <length>20</length>
    <type>Text</type>
</CustomField>