force-app/main/default/objects/Student__c/recordTypes/Experience_Student.recordType-meta.xml
<RecordType>
    <fullName>Experience_Student</fullName>
    <active>true</active>
    <label>Experience Student</label>
</RecordType>