force-app/main/default/objects/Student__c/validationRules/Make_birthdate_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Make_birthdate_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Birthdate__c )</errorConditionFormula>
    <errorDisplayField>Birthdate__c</errorDisplayField>
    <errorMessage>Birthdate can&apos;t be blank.</errorMessage>
</ValidationRule>