force-app/main/default/objects/Student__c/validationRules/Registration_Field_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Registration_Field_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>Registration_Fees__c   &lt; 5000</errorConditionFormula>
    <errorDisplayField>Registration_Fees__c</errorDisplayField>
    <errorMessage>Registration Fees should not be less than 5000.</errorMessage>
</ValidationRule>