force-app/main/default/objects/Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Student_Name__c</columns>
    <columns>State__c</columns>
    <columns>Stream_Opted__c</columns>
    <columns>Course_Opted__c</columns>
    <columns>Birthdate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>