force-app/main/default/objects/Student__c/listViews/Salesforce_Team_Student.listView-meta.xml
<ListView>
    <fullName>Salesforce_Team_Student</fullName>
    <filterScope>Queue</filterScope>
    <label>Student &amp; Lead Management Queue</label>
    <queue>Student_Lead_Management_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>