force-app/main/default/objects/Student__c/listViews/StudentDetails.listView-meta.xml
<ListView>
    <fullName>StudentDetails</fullName>
    <columns>NAME</columns>
    <columns>Student_Name__c</columns>
    <columns>Student_Email__c</columns>
    <columns>Student_Contact__c</columns>
    <columns>Avg_Ratings__c</columns>
    <columns>State__c</columns>
    <filterScope>Mine</filterScope>
    <label>StudentDetails</label>
</ListView>