force-app/main/default/objects/Student__c/listViews/StudentsWithSalesforce.listView-meta.xml
<ListView>
    <fullName>StudentsWithSalesforce</fullName>
    <columns>NAME</columns>
    <columns>Student_Contact__c</columns>
    <columns>Student_Email__c</columns>
    <columns>Student_Name__c</columns>
    <columns>Age__c</columns>
    <columns>Course_Opted__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Course_Opted__c</field>
        <operation>equals</operation>
        <value>Salesforce Admin,Salesforce Developer</value>
    </filters>
    <label>StudentsWithSalesforce</label>
</ListView>